clean up: xySequencing.form, replaced zModeComboBox with previous files

--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/SequencingClasses/GUIComponents/XYSequencing.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/SequencingClasses/GUIComponents/XYSequencing.form
@@ -71,6 +71,7 @@
                       <Component id="storeXYZButton" max="32767" attributes="0"/>
                       <Component id="clearXYZButton" max="32767" attributes="0"/>
                       <Component id="genZStackButton" max="32767" attributes="0"/>
+                      <Component id="zModeCombo" max="32767" attributes="0"/>					  
                       <Component id="clearZButton" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
@@ -142,6 +143,19 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="genZStackButtonActionPerformed"/>
+          </Events>
+        </Component>
+		<Component class="javax.swing.JComboBox" name="zModeCombo">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="2">
+                <StringItem index="0" value="Z as offset"/>
+                <StringItem index="1" value="Absolute Z"/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="zModeComboActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="clearZButton">
